# classmods

./: .gitignore  DESCRIPTION  README.md  pyproject.toml
classmods/: __init__.py  _classproperty.py  _constant_attrib.py  _env_mod.py  _logwrap.py  _remote_attrib.py  _supress_errors.py
docs/: classproperty.md
test/: test_classproperty.py  test_envmod.py
