[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"


[project]
name = "classmods"
dynamic = ["version", "description", "authors", "keywords"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = []
requires-python = ">=3.10"
readme = "README.md"
license = {file = "LICENSE"}

[tool.setuptools.dynamic]
version = {attr = "classmods.__version__"}
description = {attr = "classmods.__description__"}
authors = {attr = "classmods.__authors__"}
keywords = {attr = "classmods.__keywords__"}


[tool.setuptools]
include-package-data = true


[tool.setuptools.packages.find]
where = ["."]
include = ["classmods*", "classmods.*"]
exclude = ["test*", "dev*", "scripts*"]


[tool.setuptools.package-data]
classmods = [
    "README.md",
    "LICENSE",
]


[tool.setuptools.exclude-package-data]
classmods = [
    "__pycache__/*",
    "*.pyc",
    "*.so"
]


[project.urls]
Homepage = "https://github.com/devixa-tech/classmods"
BugTracker = "https://github.com/devixa-tech/classmods/issues"
