[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"


[project]
name = "classmods"
description = "Simple mods for python classes."
authors = [{name="devixa-dev", email="hmohammad2520@gmail.com"}]
keywords = ["python", "class", "mods", "modification", "descriptors", "methods", "methodmod", "methodobserve"]
dynamic = ["version"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = []
requires-python = ">=3.10"
readme = "README.md"
license = {file = "LICENSE"}


[tool.setuptools.dynamic]
version = {attr = "classmods.__version__"}


[tool.setuptools]
include-package-data = true


[tool.setuptools.packages.find]
where = ["."]
include = ["classmods*", "classmods.*"]
exclude = ["test*", "dev*", "scripts*"]


[tool.setuptools.package-data]
classmods = [
    "README.md",
    "LICENSE",
]


[tool.setuptools.exclude-package-data]
classmods = [
    "__pycache__/*",
    "*.pyc",
    "*.so"
]


[project.urls]
Homepage = "https://github.com/devixa-tech/classmods"
BugTracker = "https://github.com/devixa-tech/classmods/issues"
